# paper

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust.Dockerfile
src/: cell.rs  lib.rs  point.rs  utils.rs  world.rs
www/: bootstrap.js  index.html  index.js  package.json  webpack.config.js
www/src/: canvas.js  index.js
