[package]
name = "paper"
version = "0.1.0"
authors = ["rhysormond <git@rhysormond.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wee_alloc = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]